working through jdk10 issues